--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,6 +6,12 @@
 // $textLight: #adc4ca;
 // $textDark: #adc4ca30;
 
+
+
+
 $colorOne: #000;
 $colorTwo: #FFFFFF;
-$colorThree: #f8f0a4;
+$colorThree: #cbad6c;
+$colorFour: #978228;
+$colorFive: #c3866f;
+$colorSix: #e18b22;
