--- a/src/components/Header/Toolbar/Toolbar.module.scss
+++ b/src/components/Header/Toolbar/Toolbar.module.scss
@@ -5,7 +5,7 @@
     width: 100%;
     position: relative;
     left: 0;
-    background-color: $colorThree;
+    background-color: $colorTwo;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -14,9 +14,10 @@
 }
 
 .Toolbar_Logo {
-    padding: 20px;
+    padding: 0;
     display: flex;
     justify-content: center;
+    overflow: hidden;
     img {
         width: 30%;
     }
