--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -6,11 +6,8 @@
 // $textLight: #adc4ca;
 // $textDark: #adc4ca30;
 
-
-
-
 $colorOne: #000;
-$colorTwo: #FFFFFF;
+$colorTwo: #ffffff;
 $colorThree: #cbad6c;
 $colorFour: #978228;
 $colorFive: #c3866f;
