--- a/src/components/Body/Body.module.css
+++ b/src/components/Body/Body.module.css
@@ -1,14 +1,20 @@
 .Body {
-    background-color: #F7EFA3;
-    
+  background-color: #f7efa3;
+  display: flex;
+  flex-direction: column;
 }
 
 .ImgSec2 {
-    width: 100%;
-    opacity: 0.6;
+  width: 100%;
+  opacity: 0.6;
 }
 
 .ImgSec3 {
-    width: 100%;
-    opacity: 0.9;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.ImgDiv {
+  display: flex;
+  flex-flow: column;
 }
