--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,14 +1,8 @@
-//Theme's color palette
-// $primaryGray: #272935;
-// $secondaryGray: #464852;
-// $buttonGreen: #0abb87;
-// $chatGreen: #3db16b;
-// $textLight: #adc4ca;
-// $textDark: #adc4ca30;
-
 $colorOne: #000;
 $colorTwo: #ffffff;
 $colorThree: #cbad6c;
 $colorFour: #978228;
 $colorFive: #c3866f;
 $colorSix: #e18b22;
+
+$fontFive: 'EB Garamond', serif;
