--- a/src/components/Backdrop/Backdrop.module.css
+++ b/src/components/Backdrop/Backdrop.module.css
@@ -4,8 +4,13 @@
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.3);
-    z-index: 100;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 600;
+}
 
-
+.closeIcon {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 610;
 }
