--- a/src/components/UI/button/button.module.scss
+++ b/src/components/UI/button/button.module.scss
@@ -6,6 +6,10 @@
   width: 50px;
 }
 
+.Click {
+  cursor: none;;
+}
+
 .backgroundColorOne {
   background-color: $colorThree;
   &:hover {
@@ -14,8 +18,23 @@
 }
 
 .medium {
-  width: 20px;
-  height: 20px;
+  
+  @media (max-width: 575.98px) {
+    width: 10px;
+    height: 10px;
+  }
+  @media (min-width: 575.99px) and (max-width: 767.98px) {
+    width: 15px;
+    height: 15px;
+  }
+  @media (min-width: 767.99px) and (max-width: 991.98px) {
+    width: 20px;
+    height: 20px;
+  }
+  @media (min-width: 991.99px) {
+    width: 25px;
+    height: 25px;
+  }
 }
 
 .big {
