--- a/src/components/Home/Mosaic/Mosaic.module.scss
+++ b/src/components/Home/Mosaic/Mosaic.module.scss
@@ -18,21 +18,8 @@
 .Imgs img {
     object-fit: cover;
     width: 100%;
+    height: 160px;
     cursor: pointer;
-
-      @media screen and (max-width: 575.98px) {
-        height: 100px;
-      }
-      @media (min-width: 575.99px) and (max-width: 767.98px) {
-        height: 160px;
-      }
-      @media (min-width: 767.99px) and (max-width: 991.98px) {
-        height: 230px;
-      }
-      @media screen and (min-width: 991.99px) {
-        height: 300px;
-      }
-    
 }
 
 .Imgs img:hover{
@@ -40,3 +27,18 @@
   transition: background-color .5s;
 }
 
+@media (min-width: 575.99px) and (max-width: 767.98px) {
+  .Imgs img {height: 200px;}
+  .Imgs {width: 33.33%;}
+}
+
+@media (min-width: 767.99px) and (max-width: 991.98px) {
+  .Imgs img {height: 250px;}
+  .Imgs {width: 25%;}
+
+}
+@media screen and (min-width: 991.99px) {
+  .Imgs img {height: 300px;}
+  .Imgs {width: 25%;}
+
+}
