--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -5,12 +5,20 @@
   flex-direction: column;
   width: 100%;
   position: relative;
-  padding-top: 85px;
+  padding-top: 90px;
 
-  @media (max-width: 575.98px) {
-    padding-top: 45px;
-    }
-}
+  @media (min-width: 450px) and (max-width: 575.98px) {
+    padding-top: 120px;
+  }
+  @media (min-width: 575.99px) and (max-width: 767.98px) {
+    padding-top: 145px;
+  }
+  @media (min-width: 767.99px) and (max-width: 991.98px) {
+    padding-top: 135px;
+  }
+  @media (min-width: 991.99px) {
+    padding-top: 120px;
+  }}
 
 // .ImgSec2 {
 //   width: 100%;
@@ -32,6 +40,7 @@
 .ImgSec3{
   object-fit: cover;
   width: 100%;
+  
 }
 
 .ImgDiv {
