--- a/src/Pages/Blog/Blog.module.scss
+++ b/src/Pages/Blog/Blog.module.scss
@@ -6,6 +6,20 @@
     margin-left: 10%;
 
 
+    padding-top: 90px;
+
+    @media (min-width: 450px) and (max-width: 575.98px) {
+      padding-top: 120px;
+    }
+    @media (min-width: 575.99px) and (max-width: 767.98px) {
+      padding-top: 145px;
+    }
+    @media (min-width: 767.99px) and (max-width: 991.98px) {
+      padding-top: 170px;
+    }
+    @media (min-width: 991.99px) {
+      padding-top: 190px;
+    }
 }
 
 .Blog p{
