--- a/src/components/Header/Top/Top.module.scss
+++ b/src/components/Header/Top/Top.module.scss
@@ -8,19 +8,19 @@
   text-align: center;
 
     @media (max-width: 575.98px) {
-    font-size: 0.3em;
-    letter-spacing: 0.6rem;
+    font-size: 10px;
+    letter-spacing: 8px;
     }
     @media (min-width: 575.99px) and (max-width: 767.98px) {
-      font-size: 0.4em;
-      letter-spacing: 0.7rem;
+      font-size: 13px;
+      letter-spacing: 12px;
     }
     @media (min-width: 767.99px) and (max-width: 991.98px) {
-      font-size: 0.6em;
-      letter-spacing: 0.8rem;
+      font-size: 16px;
+      letter-spacing: 17px;
     }
     @media (min-width: 991.99px) {
-      font-size: 0.8em;
-      letter-spacing: 2rem;
+      font-size: 20px;
+      letter-spacing: 24px;
     }
 }
