--- a/src/components/Home/Mosaic/Mosaic.module.scss
+++ b/src/components/Home/Mosaic/Mosaic.module.scss
@@ -5,12 +5,14 @@
     flex-flow: row wrap;
     width: 100%;
     justify-content: center;
+    padding: 1% 0;
   }
 
 .Imgs{
     object-fit: cover;
-    width: 50%;
+    width: 46%;
     margin: 0;
+    padding: 2%;
     display: flex;
     flex-flow: column;
 }
@@ -19,26 +21,35 @@
     object-fit: cover;
     width: 100%;
     height: 160px;
+    
     cursor: pointer;
 }
 
 .Imgs img:hover{
-    background-color: blue;
-  transition: background-color .5s;
+    opacity: 0.5;
 }
 
 @media (min-width: 575.99px) and (max-width: 767.98px) {
   .Imgs img {height: 200px;}
-  .Imgs {width: 33.33%;}
+  .Imgs {
+    padding: 2%;
+    width: 29%;
+  }
 }
 
 @media (min-width: 767.99px) and (max-width: 991.98px) {
   .Imgs img {height: 250px;}
-  .Imgs {width: 25%;}
+  .Imgs {
+    width: 23%;
+    padding: 1%;
 
+  }
 }
+
 @media screen and (min-width: 991.99px) {
   .Imgs img {height: 300px;}
-  .Imgs {width: 25%;}
-
+  .Imgs {
+    width: 23%;
+    padding: 1%;
+  }
 }
