--- a/src/components/Home/Slider/Slider.module.scss
+++ b/src/components/Home/Slider/Slider.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
+  bottom: -4px;
 }
 
 .Slide {
@@ -54,7 +55,7 @@
   display: inline-block;
   height: 8px;
   width: 8px;
-  border: solid rgba(0, 0, 0, 0.6);
+  border: solid $colorTwo;
   border-width: 0 2px 2px 0;
   display: inline-block;
   padding: 3px;
