--- a/src/components/Lightbox/Lightbox.module.scss
+++ b/src/components/Lightbox/Lightbox.module.scss
@@ -26,7 +26,7 @@
     outline: none;
     transition: 0.5s;
     &:hover {
-      background: rgba(0, 0, 0, 0.3);
+      background: rgba(0, 0, 0, 0.1);
     }
   }
   
@@ -44,7 +44,7 @@
     display: inline-block;
     height: 8px;
     width: 8px;
-    border: solid rgba(0, 0, 0, 0.6);
+    border: solid $colorTwo;
     border-width: 0 2px 2px 0;
     display: inline-block;
     padding: 3px;
