--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -5,4 +5,6 @@ $colorFour: #978228;
 $colorFive: #c3866f;
 $colorSix: #e18b22;
 
-$fontFive: 'EB Garamond', serif;
+$footerColor: #f5ba8c;
+
+$fontFive: "EB Garamond", serif;
