--- a/src/Layout/SideDrawer/SideDrawer.module.scss
+++ b/src/Layout/SideDrawer/SideDrawer.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles/utils/variables";
+@import "../../styles/utils/variables.scss";
 
 .SideDrawer {
   background-color: $colorThree;
