--- a/src/Pages/Blog/Blog.module.scss
+++ b/src/Pages/Blog/Blog.module.scss
@@ -1,9 +1,43 @@
+@import "../../styles/utils/variables";
+
 .Blog {
-  padding-bottom: 20px;
-  width: 80%;
-  margin-left: 10%;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.Blog p {
-  text-align: justify;
+.BlogTitle {
+  font-weight: 900;
+  font-size: 130%;
+  color: $colorFive;
+}
+
+.BlogDescription {
+  font-size: 110%;
+  font-weight: 800;
+  width: 75%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.BlogRows {
+  margin: 0 auto;
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .BlogRows {
+    display: flex;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
 }
